Fix layout on small displays, improve links

--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ body {
 }
 
 .contain {
+    box-sizing: border-box;
     width: 100%;
     max-width: 30rem;
     padding: 0 2em 2em;
@@ -87,7 +88,7 @@ body {
 }
 
 .profile-pic {
-    width: 80vw;
+    width: 60%;
     max-width: 20em;
     border: 0.2em solid white;
     border-radius: 100em;
@@ -96,14 +97,26 @@ body {
 
 a {
     color: #4A148C;
-    transition: all 0.3s ease;
+    transition: all 0.2s ease;
     text-decoration: none;
+    text-shadow:
+        -1px -1px 0 #eee,
+        1px -1px 0 #eee,
+        -1px 1px 0 #eee,
+        1px 1px 0 #eee;
+    background-image: linear-gradient(
+        to top,
+        transparent,
+        transparent 2px,
+        #4A148C 2px,
+        #4A148C 3px,
+        transparent 3px);
 }
 a:visited {
-    color: #805aae;
+    color: #4A148C;
 }
 a:hover {
-    text-shadow: 0 1px 2px rgba(128,90,178, 0.6);
+    color: #805aae;
 }
 
 ul.no-bullets {
@@ -138,10 +151,26 @@ footer {
 
 footer a {
     color: #ddd;
+    text-shadow:
+        -1px -1px 0 #363636,
+        1px -1px 0 #363636,
+        -1px 1px 0 #363636,
+        1px 1px 0 #363636;
+    background-image: linear-gradient(
+        to top,
+        transparent,
+        transparent 2px,
+        #ddd 2px,
+        #ddd 3px,
+        transparent 3px);
 }
 
 footer a:visited {
     color: #ddd;
+}
+
+footer a:hover {
+    color: #fff;
 }
 
 
